set_calc/mainapp/static/css/style.less
@import "colors";
body {
  margin: 0;
  font-family: sans-serif;
  color: @gray-dark;
  background: @gray-dark;
}
.preloader {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background: @white;
  transition: all 0.3s;
  position: absolute;
  top: 0;
  &__img {
    height: 200px;
    animation: preloader 1.5s infinite ease-in-out 0.5s;
  }
  &_transparent {
    opacity: 0;
  }
  &_none {
    display: none;
  }
}

@keyframes preloader {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(0.7);
  }
  100% {
    transform: scale(1);
  }
}

